Задача по редней зарплате